apps/playground/kiosk-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiosk-server
spec:
  selector:
    matchLabels:
      app: kiosk-server
  replicas: 1
  template:
    metadata:
      labels:
        app: kiosk-server
    spec:
      containers:
      - name: kiosk-server
        image: nginx:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /usr/share/nginx/html/config.txt
          name: config
          subPath: config.txt
      volumes:
      - name: config
        configMap:
          name: kiosk-server
---
apiVersion: v1
kind: Service
metadata:
  name: kiosk-server
spec:
  selector:
    app: kiosk-server
  ports:
    - name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiosk-server
spec:
  ingressClassName: nginx
  rules:
  - host: kiosk-server.home
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: kiosk-server
            port:
              number: 80
